---------------------------------------------------------------------------------------------------
Version: 4.0.1
Date: 2020.XX.XX
  Bugfixes:
    - Fixed cases where gcd function hung on NaN
    - Fixed cases where recgen wouldn't handle tech icons correctly
    - Added omni.lib.multiply_recipe_ingredient()
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 2020.08.14
  Changes:
    - Updated for Factorio version 1.0.0
    - Added "spider-vehicle", "spider-leg" and "spidertron-remote" types
---------------------------------------------------------------------------------------------------
Version: 3.18.18
Date: 2020.08.13
  Features:
    - Added omni.lib.enable_recipe()
  Bugfixes:
    - Fixed a case where icon overlays weren't added correctly
    - Fixed omni.lib.replace_science_pack() not properly working with untagged tables
---------------------------------------------------------------------------------------------------
Version: 3.18.17
Date: 2020.08.07
  Bugfixes:
    - Fixed a control error when loading up old saves
---------------------------------------------------------------------------------------------------
Version: 3.18.16
Date: 2020.08.07
  Changes:
    - Fixed RecGen:impoort overwriting recipe subgroup and order
    - Complete rewrite of all recipe related functions to avoid unnecessary standardisation
    - Control.lua rewritten and now handles compression unlocks
    - Run-time and load-time performance improvements
  Bugfixes:
    - Multiple locale and icon fixes in recipe-generation
---------------------------------------------------------------------------------------------------
Version: 3.18.15
Date: 2020.07.15
  Features:
    - Added BuildGen:setNextUpgrade()
  Changes:
    - Added logging functions to give better feedback when loading up mods with broken recipes
    - Tweaked the science pack colour override script to be less heavy handed