@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.1
 Date: 2020.XX.XX
+  Features:
+    - Add omni.lib.iunion as a faster alternative to lib.union for merging two contiguous arrays
   Bugfixes:
     - Fixed cases where gcd function hung on NaN
     - Fixed cases where recgen wouldn't handle tech icons correctly
